--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect Example</title>
+    <title>Redirect</title>
 </head>
 <body>
-    <p>Clique no link abaixo para ser redirecionado:</p>
-    <a href="https://google.com" id="redirectLink">Link para Google.com</a>
+    <center><p>Clique no link abaixo para ser redirecionado:</p>
+    <a href="https://google.com" id="redirectLink">Link para Google.com</a></center>
 
     <script>
         // Função para redirecionar ao clicar no link
