--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Redirect</title>
 </head>
 <body>
-    <center><p>Clique no link abaixo para ser redirecionado:</p>
-    <a href="https://google.com" id="redirectLink">Link para Google.com</a></center>
+    <center><h1>Clique no link abaixo para ser redirecionado:</h1>
+    <h2 href="https://google.com" id="redirectLink">Link para Google.com</h2></center>
 
     <script>
         // Função para redirecionar ao clicar no link
@@ -18,3 +18,6 @@
     </script>
 </body>
 </html>
+
+
+
