--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Redirect</title>
 </head>
 <body>
-    <center><h1>Clique no link abaixo para ser redirecionado:</h1>
-    <h2 href="https://google.com" id="redirectLink">Link para Google.com</h2></center>
-
+    <center>
+        <h1>Clique no link abaixo para ser redirecionado:</h1>
+    <h2 href="https://google.com" id="redirectLink">Link para Google.com</h2>
+    </center>
     <script>
         // Função para redirecionar ao clicar no link
         document.getElementById("redirectLink").addEventListener("click", function(event) {
