--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>Clique no link abaixo para ser redirecionado:</h1>
-    <h2 href="https://google.com" id="redirectLink">Link para Google.com</h2>
+    <a href="https://google.com" id="redirectLink">Link para Google.com<a>
     </center>
     <script>
         // Função para redirecionar ao clicar no link
@@ -19,6 +19,4 @@
     </script>
 </body>
 </html>
-
-
 
