--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect Example</title>
+    <title>Redirect EndPoint</title>
 </head>
 <body>
-    <p>Click on link to Redirect:</p>
-    <a href="https://google.com" id="redirectLink">Link para Google.com</a>
+    <center><h1>Click on link to Redirect:</h1>
+    <a href="https://google.com" id="redirectLink">Link para Google.com</a></center>
 
     <script>
         document.getElementById("redirectLink").addEventListener("click", function(event) {
