--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center><h1>Click on link to Redirect:</h1>
-    <a href="https://google.com" id="redirectLink">Link para Google.com</a></center>
+    <a href="https://google.com" id="redirectLink">Link to Google</a></center>
 
     <script>
         document.getElementById("redirectLink").addEventListener("click", function(event) {
