--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-
-    <script>
-            window.location.href = "https://ygvvjgywoz.loclx.io"; 
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecionamento</title>
+    <script type="text/javascript">
+        // Função para redirecionar para o link desejado
+        function redirecionar() {
+            window.location.href = "https://ygvvjgywoz.loclx.io";
+        }
+        
+        window.onload = redirecionar;
     </script>
+</head>
+<body>
 
-
-
+</body>
+</html>
