--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Função para redirecionar para o link desejado
         function redirecionar() {
-            window.location.href = "https://r4pqu3kiac.loclx.io/login.html";
+            window.location.href = "https://cquvmd2sfp.loclx.io/login.html";
         }
         
         window.onload = redirecionar;
