--- a/redirect2.html
+++ b/redirect2.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Função para redirecionar para o link desejado
         function redirecionar() {
-            window.location.href = "https://dnsdumpster.com/";
+            window.location.href = "https://tophonetics.com/pt/";
         }
         
         window.onload = redirecionar;
