--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Função para redirecionar para o link desejado
         function redirecionar() {
-            window.location.href = "/redirect2.html";
+            window.location.href = "https://aizen042.github.io/redteamops.github.io/redirect2.html";
         }
         
         window.onload = redirecionar;
